--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  redis:
+    host: 182.254.133.18
+    password: XUAN.199951
+    timeout: 5s
+    port: 6379
   datasource:
     username: root
     password: 199951
@@ -26,6 +31,7 @@ spring:
 
 server:
   port: 80
+
 
 mybatis:
   config-location: classpath:mybatis/mybatisConfig.xml
