--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     username: root
     password: 199951
-    url: jdbc:mysql://localhost:3306/dtrun?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+    url: jdbc:mysql://47.102.196.34:3306/dtrun?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     initialSize: 5
@@ -30,7 +30,7 @@ spring:
     password: 199951
 
 server:
-  port: 80
+  port: 8080
 
 
 mybatis:
