上传头像初步实现

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
 
 
     <build>
+        <finalName>dtrun</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
