--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
     "antd": "^4.9.1",
+    "antd-img-crop": "^3.13.2",
     "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-cookies": "^0.1.1",
