--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,8 @@ spring:
 server:
   port: 8080
   max-http-header-size: 10MB
+  servlet:
+    context-path: /api
 
 mybatis:
   config-location: classpath:mybatis/mybatisConfig.xml
