--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,5 +44,5 @@ mybatis:
 user:
   iconUrl: https://cdn.jsdelivr.net/gh/WendyBoys/oss/img/icon.png
   userName: 无名氏
-  #本地开发时用 http://127.0.0.1:8080/icon/
-  iconUrlPrefix: https://api.dtrun.cn/icon/
+  #本地开发时用 http://127.0.0.1:8080/api/icon/
+  iconUrlPrefix: https://api.dtrun.cn/api/icon/
