--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>            
+            <groupId>org.springframework.boot</groupId>         
+            <artifactId>spring-boot-starter-mail</artifactId>      
+        </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -86,7 +90,6 @@
             <version>3.10.2</version>
         </dependency>
     </dependencies>
-
 
 
     <build>
